# notification_ces_standard

./: BUILD.gn  README.en.md  README.md  README_zh.md  event.gni  ohos.build
cesfwk/innerkits/: BUILD.gn
cesfwk/innerkits/include/: common_event.h  common_event_death_recipient.h  common_event_listener_handler.h  common_event_proxy.h  common_event_stub.h  icommon_event.h  ievent_receive.h
cesfwk/innerkits/src/: common_event.cpp  common_event_listener_handler.cpp  common_event_proxy.cpp  common_event_stub.cpp  event_receive_proxy.cpp  event_receive_stub.cpp
cesfwk/innerkits/test/unittest/: BUILD.gn
cesfwk/kits/napi/native_module/: BUILD.gn  native_module.cpp
cesfwk/kits/native/: BUILD.gn
cesfwk/kits/native/include/: async_common_event_result.h  common_event_data.h  common_event_manager.h  common_event_publish_info.h  common_event_subscriber.h  common_event_support.h
cesfwk/kits/native/src/: common_event_data.cpp  common_event_manager.cpp  common_event_subscribe_info.cpp  common_event_support.cpp  matching_skills.cpp
cesfwk/kits/native/test/unittest/: BUILD.gn  common_event_unsubscribe_test.cpp
cesfwk/services/: BUILD.gn
cesfwk/services/include/: bms_death_recipient.h  common_event_control_manager.h  common_event_manager_service.h  common_event_record.h  common_event_sticky_manager.h  common_event_subscriber_manager.h  inner_common_event_manager.h  ordered_event_handler.h  ordered_event_record.h  publish_manager.h
cesfwk/services/src/: bms_death_recipient.cpp  common_event_control_manager.cpp  common_event_manager_service.cpp  common_event_permission_manager.cpp  common_event_sticky_manager.cpp  common_event_subscriber_manager.cpp  inner_common_event_manager.cpp  publish_manager.cpp
cesfwk/services/test/mock/include/: mock_bundle_manager.h
cesfwk/services/test/mock/src/: mock_bundle_manager.cpp
cesfwk/services/test/moduletest/common_event_services_module_test/: BUILD.gn
cesfwk/services/test/moduletest/common_event_services_publish_ordered_module_test/: BUILD.gn  common_event_services_publish_ordered_module_test.cpp
cesfwk/services/test/unittest/: BUILD.gn  common_event_dump_test.cpp  common_event_freeze_test.cpp  common_event_publish_ordered_event_unit_test.cpp  common_event_publish_permission_event_unit_test.cpp  common_event_publish_system_event_test.cpp  common_event_subscribe_unit_test.cpp
cesfwk/services/test/unittest/mock/include/: mock_bundle_manager.h
cesfwk/services/test/unittest/mock/src/: mock_bundle_manager.cpp  (+1 more)
cesfwk/tools/test/moduletest/cem/: BUILD.gn  common_event_command_dump_module_test.cpp  common_event_command_publish_module_test.cpp
cesfwk/tools/test/systemtest/cem/: BUILD.gn  common_event_command_publish_system_test.cpp
cesfwk/tools/test/unittest/cem/: BUILD.gn  common_event_command_dump_test.cpp  common_event_command_publish_test.cpp  common_event_command_test.cpp
frameworks/native/test/unittest/: BUILD.gn  common_event_subscribe_test.cpp  common_event_unsubscribe_test.cpp  matching_skills_test.cpp
interfaces/kits/napi/common_event/: BUILD.gn
interfaces/kits/napi/common_event/include/: common_event.h  support.h
interfaces/kits/napi/common_event/src/: common_event.cpp  support.cpp
services/: BUILD.gn
services/ces/include/: bundle_manager_helper.h  common_event_control_manager.h  common_event_manager_service.h  common_event_permission_manager.h  common_event_sticky_manager.h  common_event_subscriber_manager.h  history_event_record.h  inner_common_event_manager.h  publish_manager.h  subscriber_death_recipient.h  system_time.h
services/ces/src/: bundle_manager_helper.cpp  common_event_control_manager.cpp  common_event_manager_service.cpp  common_event_permission_manager.cpp  common_event_sticky_manager.cpp  common_event_subscriber_manager.cpp  inner_common_event_manager.cpp  publish_manager.cpp
services/test/mock/include/: mock_bundle_manager.h
services/test/mock/src/: system_ability_manager.cpp  system_ability_manager_stub.cpp
services/test/moduletest/: BUILD.gn
services/test/moduletest/common_event_services_module_test/: BUILD.gn  common_event_services_module_test.cpp
services/test/moduletest/common_event_services_publish_ordered_module_test/: BUILD.gn  common_event_services_publish_ordered_module_test.cpp
services/test/unittest/: BUILD.gn  common_event_dump_test.cpp  common_event_freeze_test.cpp  common_event_publish_manager_event_unit_test.cpp  common_event_publish_ordered_event_unit_test.cpp  common_event_publish_permission_event_unit_test.cpp  common_event_publish_system_event_test.cpp  common_event_sticky_test.cpp  common_event_subscribe_unit_test.cpp  common_event_unsubscribe_unit_test.cpp
services/test/unittest/mock/include/: mock_bundle_manager.h
services/test/unittest/mock/src/: iservice_registry.cpp  mock_bundle_manager.cpp
test/systemtest/common/acts/: BUILD.gn
test/systemtest/common/acts/actsCESCESpublishInfoTest/: BUILD.gn  actsCESCESpublishInfoTest.cpp
test/systemtest/common/acts/actsCESDataTest/: BUILD.gn  actsCESDataTest.cpp
test/systemtest/common/acts/actsCESManagertest/: BUILD.gn  actsCESManagertest.cpp
test/systemtest/common/acts/actsCESMatchingSkillsTest/: BUILD.gn  actsCESMatchingSkillsTest.cpp
test/systemtest/common/acts/actsCESSubscribeInfoTest/: BUILD.gn  actsCESSubscribeInfoTest.cpp
test/systemtest/common/acts/actsfuzztest/: BUILD.gn  actsFuzzTest.cpp
test/systemtest/common/ces/: BUILD.gn
test/systemtest/common/ces/common_event_services_publish_ordered_system_test/: BUILD.gn  common_event_services_publish_ordered_system_test.cpp
test/systemtest/common/ces/common_event_services_system_test/: BUILD.gn  common_event_services_system_test.cpp
test/systemtest/common/resource/cesSTPermissionDefaultA/: BUILD.gn  config.json
test/systemtest/common/resource/cesSTPermissionOrAB/: BUILD.gn  config.json
tools/cem/: BUILD.gn
tools/cem/include/: common_event_command.h
tools/cem/src/: common_event_command.cpp  main.cpp
tools/test/systemtest/cem/: BUILD.gn  common_event_command_dump_system_test.cpp  common_event_command_publish_system_test.cpp
(+85 files in other folders)
