# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

aafwk_path = "//foundation/aafwk/standard"

appexecfwk_path = "//foundation/appexecfwk/standard"

ces_standard_path = "//base/notification/ces_standard"

frameworks_path = "${ces_standard_path}/frameworks"

interfaces_path = "${ces_standard_path}/interfaces"

services_path = "${ces_standard_path}/services"

tools_path = "${ces_standard_path}/tools"

ces_common_path = "${frameworks_path}/common"

ces_core_path = "${frameworks_path}/core"

ces_innerkits_path = "${interfaces_path}/innerkits/native"

ces_native_path = "${frameworks_path}/native"

ces_services_path = "${services_path}/ces"
