# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/notification/ces_standard/event.gni")
import("//build/ohos.gni")

cflags = []

config("ces_services_config") {
  visibility = [ ":*" ]

  include_dirs = []

  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }

  defines = [
    "EVENT_LOG_TAG = \"CesService\"",
    "LOG_DOMAIN = 0xD008800",
  ]
}

config("ces_services_public_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "${ces_services_path}/include",
    "//foundation/aafwk/standard/interfaces/innerkits/base/include/",
    "//foundation/aafwk/standard/interfaces/innerkits/want/include/ohos/aafwk/content",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_base/include/",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_core/include/bundlemgr",
    "//foundation/appexecfwk/standard/interfaces/innerkits/libeventhandler/include",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy/include",
    "//utils/native/base/include",
    "//utils/system/safwk/native/include",
  ]
}

ohos_shared_library("cesfwk_services") {
  sources = [
    "${ces_services_path}/src/bms_death_recipient.cpp",
    "${ces_services_path}/src/bundle_manager_helper.cpp",
    "${ces_services_path}/src/common_event_control_manager.cpp",
    "${ces_services_path}/src/common_event_manager_service.cpp",
    "${ces_services_path}/src/common_event_permission_manager.cpp",
    "${ces_services_path}/src/common_event_sticky_manager.cpp",
    "${ces_services_path}/src/common_event_subscriber_manager.cpp",
    "${ces_services_path}/src/inner_common_event_manager.cpp",
    "${ces_services_path}/src/ordered_event_handler.cpp",
    "${ces_services_path}/src/publish_manager.cpp",
    "${ces_services_path}/src/subscriber_death_recipient.cpp",
    "${ces_services_path}/src/system_time.cpp",
  ]

  configs = [ ":ces_services_config" ]

  public_configs = [ ":ces_services_public_config" ]

  deps = [
    "${ces_common_path}:libevent_common",
    "${ces_core_path}:cesfwk_core",
    "${ces_native_path}:cesfwk_innerkits",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "aafwk_standard:want",
    "appexecfwk_standard:appexecfwk_base",
    "appexecfwk_standard:appexecfwk_core",
    "appexecfwk_standard:libeventhandler",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_L2:samgr_proxy",
  ]

  subsystem_name = "notification"
  part_name = "ces_standard"
}
