# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/notification/ces_standard/event.gni")
import("//build/ohos.gni")
CESFWK_INNERKITS_DIR = "//base/notification/ces_standard/cesfwk/innerkits"
CESFWK_KITS_DIR = "//base/notification/ces_standard/cesfwk/kits/native"
cflags = []

config("cesfwk_innerkits_config") {
  visibility = [ ":*" ]

  include_dirs = []

  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }

  defines = [
    "EVENT_LOG_TAG = \"CesFwk\"",
    "LOG_DOMAIN = 0xD008800",
  ]
}

config("cesfwk_innerkits_public_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "${CESFWK_INNERKITS_DIR}/include",
    "${CESFWK_KITS_DIR}/include",
    "//foundation/aafwk/standard/interfaces/innerkits/base/include/",
    "//foundation/aafwk/standard/interfaces/innerkits/base/include/ohos/aafwk/base/",
    "//foundation/aafwk/standard/interfaces/innerkits/want/include/ohos/aafwk/content/",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_base/include",
    "//foundation/appexecfwk/standard/interfaces/innerkits/libeventhandler/include",
    "//foundation/appexecfwk/standard/services/bundlemgr/include/",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy/include",
    "//base/notification/ces_standard/common/log/include",
    "//utils/native/base/include",
    "//utils/system/safwk/native/include",
  ]
}

ohos_shared_library("cesfwk_innerkits") {
  sources = [
    "${CESFWK_INNERKITS_DIR}/src/common_event.cpp",
    "${CESFWK_INNERKITS_DIR}/src/common_event_death_recipient.cpp",
    "${CESFWK_INNERKITS_DIR}/src/common_event_listener.cpp",
    "${CESFWK_INNERKITS_DIR}/src/common_event_proxy.cpp",
    "${CESFWK_INNERKITS_DIR}/src/common_event_stub.cpp",
    "${CESFWK_INNERKITS_DIR}/src/event_receive_proxy.cpp",
    "${CESFWK_INNERKITS_DIR}/src/event_receive_stub.cpp",
    "${CESFWK_KITS_DIR}/src/async_common_event_result.cpp",
    "${CESFWK_KITS_DIR}/src/common_event_data.cpp",
    "${CESFWK_KITS_DIR}/src/common_event_publish_info.cpp",
    "${CESFWK_KITS_DIR}/src/common_event_subscribe_info.cpp",
    "${CESFWK_KITS_DIR}/src/common_event_subscriber.cpp",
    "${CESFWK_KITS_DIR}/src/matching_skills.cpp",
  ]

  configs = [ ":cesfwk_innerkits_config" ]

  public_configs = [ ":cesfwk_innerkits_public_config" ]

  deps = [
    "${event_common_path}:libevent_common",
    "//foundation/aafwk/standard/interfaces/innerkits/want:want",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_base:appexecfwk_base",
    "//foundation/appexecfwk/standard/interfaces/innerkits/libeventhandler:libeventhandler",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]

  subsystem_name = "notification"
  part_name = "ces_standard"
}
