# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/notification/ces_standard/event.gni")
import("//build/ohos.gni")
CESFWK_INNERKITS_DIR = "//base/notification/ces_standard/cesfwk/innerkits"
CESFWK_KITS_DIR = "//base/notification/ces_standard/cesfwk/kits/native"
CESFWK_SERVICES_DIR = "//base/notification/ces_standard/cesfwk/services"
cflags = []

config("cesfwk_services_config") {
  visibility = [ ":*" ]

  include_dirs = []

  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }

  defines = [
    "EVENT_LOG_TAG = \"CesService\"",
    "LOG_DOMAIN = 0xD008800",
  ]
}

config("cesfwk_services_public_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "${CESFWK_INNERKITS_DIR}/include",
    "${CESFWK_KITS_DIR}/include",
    "${CESFWK_SERVICES_DIR}/include",
    "//foundation/aafwk/standard/interfaces/innerkits/base/include/",
    "//foundation/aafwk/standard/interfaces/innerkits/want/include/ohos/aafwk/content",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_base/include/",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_core/include/bundlemgr",
    "//foundation/appexecfwk/standard/interfaces/innerkits/libeventhandler/include",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy/include",
    "//base/notification/ces_standard/common/log/include",
    "//utils/native/base/include",
    "//utils/system/safwk/native/include",
  ]
}

ohos_shared_library("cesfwk_services") {
  sources = [
    "${CESFWK_SERVICES_DIR}/src/bms_death_recipient.cpp",
    "${CESFWK_SERVICES_DIR}/src/bundle_manager_helper.cpp",
    "${CESFWK_SERVICES_DIR}/src/common_event_control_manager.cpp",
    "${CESFWK_SERVICES_DIR}/src/common_event_manager_service.cpp",
    "${CESFWK_SERVICES_DIR}/src/common_event_permission_manager.cpp",
    "${CESFWK_SERVICES_DIR}/src/common_event_sticky_manager.cpp",
    "${CESFWK_SERVICES_DIR}/src/common_event_subscriber_manager.cpp",
    "${CESFWK_SERVICES_DIR}/src/inner_common_event_manager.cpp",
    "${CESFWK_SERVICES_DIR}/src/ordered_event_handler.cpp",
    "${CESFWK_SERVICES_DIR}/src/publish_manager.cpp",
    "${CESFWK_SERVICES_DIR}/src/subscriber_death_recipient.cpp",
    "${CESFWK_SERVICES_DIR}/src/system_time.cpp",
  ]

  configs = [ ":cesfwk_services_config" ]

  public_configs = [ ":cesfwk_services_public_config" ]

  deps = [
    "${CESFWK_INNERKITS_DIR}:cesfwk_innerkits",
    "${CESFWK_KITS_DIR}:cesfwk_kits",
    "${event_common_path}:libevent_common",
    "//foundation/aafwk/standard/interfaces/innerkits/want:want",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_base:appexecfwk_base",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_core:appexecfwk_core",
    "//foundation/appexecfwk/standard/interfaces/innerkits/libeventhandler:libeventhandler",
    "//foundation/distributedschedule/safwk/interfaces/innerkits/safwk:system_ability_fwk",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]

  subsystem_name = "notification"
  part_name = "ces_standard"
}
