# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_shared_library("commonevent") {
  include_dirs = [
    "//foundation/aafwk/standard/services/common/include/",
    "//foundation/ace/napi/interfaces/kits/napi",
    "//third_party/node/src",
    "//third_party/libuv/include",
  ]

  sources = [ "native_module.cpp" ]

  deps = [
    "//base/notification/ces_standard/cesfwk/kits/native:cesfwk_kits",
    "//foundation/aafwk/standard/interfaces/innerkits/want:want",
    "//foundation/ace/napi:ace_napi",
    "//third_party/libuv:uv_static",
  ]

  external_deps = [
    "appexecfwk_standard:appexecfwk_base",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]

  relative_install_dir = "module"
  subsystem_name = "notification"
  part_name = "ces_standard"
}
